Major changes to calculator
Added functionality to buttons of calculator
Added arithmetic operations
Added styling to calculator
Changed format of bottommost row of calculator

--- a/Project/main.html
+++ b/Project/main.html
@@ -16,21 +16,15 @@
 
     <body>
 
-        <div class="screen-container">
+        <div class="screen"></div>
 
-            <div class="screen">
-                <p></p>
-            </div>
-
-        </div>
-
-        <div class="grid-container">
+        <div class="button-container">
 
             <div class="grid-row">
 
-                <button id="button7">7</button>
-                <button id="button9">9</button>
-                <button id="button8">8</button>
+                <button class="number" id="button7">7</button>
+                <button class="number" id="button8">8</button>
+                <button class="number" id="button9">9</button>
                 <button id="buttonDEL">DEL</button>
                 <button id="buttonAC">AC</button>
 
@@ -38,30 +32,30 @@
 
             <div class="grid-row">
 
-                <button id="button4">4</button>
-                <button id="button5">5</button>
-                <button id="button6">6</button>
-                <button id="buttonMULTIPLY">X</button>
-                <button id="buttonDIVIDE">/</button>
+                <button class="number" id="button4">4</button>
+                <button class="number" id="button5">5</button>
+                <button class="number" id="button6">6</button>
+                <button class='operator' id="buttonMULTIPLY">*</button>
+                <button class='operator' id="buttonDIVIDE">/</button>
 
             </div>
 
             <div class="grid-row">
 
-                <button id="button1">1</button>
-                <button id="button2">2</button>
-                <button id="button3">3</button>
-                <button id="buttonADD">+</button>
-                <button id="buttonSUBTRACT">-</button>
+                <button class="number" id="button1">1</button>
+                <button class="number" id="button2">2</button>
+                <button class="number" id="button3">3</button>
+                <button class='operator' id="buttonADD">+</button>
+                <button class='operator' id="buttonSUBTRACT">-</button>
 
             </div>
 
             <div class="grid-row">
 
-                <button id="button0">0</button>
+                <button class="number" id="button0">0</button>
                 <button id="buttonPERIOD">.</button>
-                <button id="buttonEXP">EXP</button>
-                <button id="buttonANS">ANS</button>
+                <!-- <button id="buttonEXP">EXP</button> -->
+                <!-- <button id="buttonANS">ANS</button> -->
                 <button id="buttonEQUALS">=</button>
 
             </div>
